examples/errors/loop_type.aaa
fn
    main
begin
    while
        true
    begin
        0
    end
end
